ghc-4335c07/testsuite/tests/deriving/should_compile/drv014.hs
{-# LANGUAGE StandaloneDeriving, GeneralizedNewtypeDeriving #-}

module ShouldCompile where

data T a  = T1 a | T2
newtype N = MkN Int

deriving instance Eq a => Eq (T a)
deriving instance Num N
deriving instance Eq N
deriving instance Show N
